--- a/assets/styles/font.scss
+++ b/assets/styles/font.scss
@@ -1,4 +1,10 @@
 @font-face {
+  font-family: "Swiyaga";
+  src: url("~assets/fonts/swiyaga.ttf") format("truetype");
+  font-weight: 700;
+}
+
+@font-face {
   font-family: "MyEurope";
   src: url("~assets/fonts/europe-bold.ttf") format("truetype");
   font-weight: 700;
@@ -9,3 +15,4 @@
   src: url("~assets/fonts/europe-normal.ttf") format("truetype");
   font-weight: 300;
 }
+
